--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,9 @@ img {
 .isOpenToWork{
   background-color:green;
 }
+.formExample{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  padding: 40px;
+}
