--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root{
   --red: red;
 }
 
 
 body{
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
   font-size: 1.5rem;
 }
