--- a/src/components/PostApp/Posts.module.css
+++ b/src/components/PostApp/Posts.module.css
@@ -7,8 +7,24 @@
 }
 .post{
   padding: 20px;
-  box-shadow: 2px 2px 5px 4px gray;
+  box-shadow: 2px 2px 5px 4px rgb(117, 117, 117);
   display: flex;
   flex-direction: column;
   gap:10px;
+}
+.loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+  padding: 40px;
+  form{
+    display: flex;
+    gap:10px;
+  }
 }
