--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root{
   --red: red;
 }
@@ -24,11 +28,11 @@ ol {
   margin: 0;
   padding: 0;
 }
-.flex{
+/* .flex{
   justify-content: center;
   display: flex;
   gap:20px;
-}
+} */
 .header{
   background-color: teal;
   padding: 10px 20px;
@@ -49,7 +53,7 @@ img {
 .bigText{
   font-size: 5rem;
 }
-.btn{
+/* .btn{
   padding: 10px 22px;
 	border-radius: 4px;
 	border: none;
@@ -63,7 +67,7 @@ img {
 		background-color: #091ec2;
 		color: white;
 	}
-}
+} */
 .label{
   display: flex;
   flex-direction: column;
