--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ body{
   color: red;
   text-decoration: underline;
 }
+.aboutLink{
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
